fabric8/ingress/fabric8-docker-registry-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: registry-ingress
  labels: 
    app: registry
  annotations:
    prometheus.io/probe: "true"
    kubernetes.io/ingress.class: "app"
    nginx.ingress.kubernetes.io/vts-filter-key: $uri $server_name
spec:
  rules:
  - host: registry.youben.demo
    http:
      paths:
      - backend:
          serviceName: fabric8-docker-registry
          servicePort: 80
