fabric8/ingress/fabric8-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fabric8-ingress
  labels: 
    app: fabric8
  annotations:
    prometheus.io/probe: "true"
    kubernetes.io/ingress.class: "app"
    nginx.ingress.kubernetes.io/vts-filter-key: $uri $server_name
spec:
  rules:
  - host: fabric8.youben.demo
    http:
      paths:
      - backend:
          serviceName: fabric8
          servicePort: 80
