fabric8/ingress/gogs-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gogs-ingress
  labels: 
    app: gogs
  annotations:
    prometheus.io/probe: "true"
    kubernetes.io/ingress.class: "app"
    nginx.ingress.kubernetes.io/vts-filter-key: $uri $server_name
spec:
  rules:
  - host: gogs.youben.demo
    http:
      paths:
      - backend:
          serviceName: gogs
          servicePort: 80
